@@ -1,6 +1,6 @@
 {
   "name": "simp-at",
-  "version": "0.6.0",
+  "version": "1.0.0",
   "author": "SIMP Team",
   "summary": "A SIMP Puppet module for managing at",
   "license": "Apache-2.0",
@@ -11,10 +11,6 @@
     "simp"
   ],
   "dependencies": [
-    {
-      "name": "simp/simplib",
-      "version_requirement": ">= 4.9.0 < 5.0.0"
-    },
     {
       "name": "puppetlabs/concat",
       "version_requirement": ">= 6.4.0 < 10.0.0"
@@ -35,16 +31,16 @@
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
         "8",
-        "7",
-        "9"
+        "9",
+        "10"
       ]
     },
     {
       "operatingsystem": "RedHat",
       "operatingsystemrelease": [
         "8",
-        "7",
-        "9"
+        "9",
+        "10"
       ]
     },
     {
@@ -66,7 +62,8 @@
       "operatingsystem": "AlmaLinux",
       "operatingsystemrelease": [
         "8",
-        "9"
+        "9",
+        "10"
       ]
     }
   ],
