@@ -1,0 +1,17 @@
+---
+HOSTS:
+  alma8:
+    roles:
+      - client
+    platform: el-8-x86_64
+    hypervisor: docker
+    image: almalinux:8
+    docker_cmd: '/usr/sbin/init'
+    docker_preserve_image: true
+    docker_image_commands:
+      # Puppet Deps
+      - 'yum install -y rsync openssl openssh-server'
+CONFIG:
+  log_level: verbose
+  type: aio
+  puppet_collection: <%= ENV.fetch('BEAKER_PUPPET_COLLECTION', '~') %>
